test/conformance/kuttl/mutate/clusterpolicy/standard/existing/basic/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-existing-secret
status:
  ready: true
